fixes prod deploy

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 **/node_modules
+/build
 # Created by https://www.toptal.com/developers/gitignore/api/vim,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,visualstudiocode
 
